[package]
name = "lock-free-stack"
version = "0.1.0"
authors = ["bai <nkbai@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch={verion="0.8",path="../crossbeam/crossbeam-epoch"}
[dev-dependencies]
crossbeam-utils = "0.7"
